kubernetes/apps/kubernetes-bootcamp/service.yaml
---
# Kubernetes Service for kubernetes-bootcamp application
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-bootcamp
  labels:
    app: kubernetes-bootcamp
    app.kubernetes.io/name: kubernetes-bootcamp
    app.kubernetes.io/managed-by: infrastructure-monorepo
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: kubernetes-bootcamp
